ie8 JSON.stringfy

--- a/.src/detail.html
+++ b/.src/detail.html
@@ -39,12 +39,14 @@
                                     <plugin name="plugin-activity"></plugin>
                                 </p>
 
-                                <p>$$
+                                <p>
+                                	$$
                                 	\left( \begin{array}{c|c}<br/>1 &amp; 2 \\<br/>\hline<br/>3 &amp; 4<br/>\end{array} \right)
                                 	$$
                                 </p>
-								<p>\left ( \begin{array}{cc|c}<br/>1 &amp; 2 &amp; 3 \\<br/>4 &amp; 5 &amp; 6<br/>\end{array} \right )
-
+								<p>
+									$$
+									\left ( \begin{array}{cc|c}<br/>1 &amp; 2 &amp; 3 \\<br/>4 &amp; 5 &amp; 6<br/>\end{array} \right )
 									$$
 								</p>
 
@@ -59,6 +61,15 @@
 \hline %插入横线，如果去掉\hline就是增广矩阵
 4 & 5 & 6
 \end{array}  \right]
+$$
+
+$$
+\begin{eqnarray}
+\nabla\cdot\vec{E} &=& \frac{\rho}{\epsilon_0} \\
+\nabla\cdot\vec{B} &=& 0 \\
+\nabla\times\vec{E} &=& -\frac{\partial B}{\partial t} \\
+\nabla\times\vec{B} &=& \mu_0\left(\vec{J}+\epsilon_0\frac{\partial E}{\partial t} \right)
+\end{eqnarray}
 $$
 								</p>
 
